@@ -1,3 +1,10 @@
+2007-11-07  Alexander Larsson  <alexl@redhat.com>
+
+        * common/gdbusutils.c:
+        * daemon/gvfsbackendtest.c:
+        * daemon/gvfsbackendtrash.c:
+	Ansi C fixes from Jens Granseuer
+
 2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* configure.ac:
